--- a/doc/modules/cassandra/pages/new/messaging.adoc
+++ b/doc/modules/cassandra/pages/new/messaging.adoc
@@ -85,9 +85,9 @@ arrival from other nodes in the cluster. These limits are applied to the
 on-wire size of the message being sent or received.
 . The basic per-link limit is consumed in isolation before any endpoint
 or global limit is imposed. Each node-pair has three links: urgent,
-small and large. So any given node may have a maximum of
-`N*3 * (internode_application_send_queue_capacity_in_bytes + internode_application_receive_queue_capacity_in_bytes)`
-messages queued without any coordination between them although in
+small and large. Any given node may have a maximum of
+`N*3 * (internode_application_send_queue_capacity in bytes + internode_application_receive_queue_capacity in bytes)`
+of messages data queued without any coordination between them although in
 practice, with token-aware routing, only RF*tokens nodes should need to
 communicate with significant bandwidth.
 . The per-endpoint limit is imposed on all messages exceeding the
@@ -99,12 +99,12 @@ following configuration settings have been added to `cassandra.yaml` for
 resource limits on queued messages.
 
 ....
-internode_application_send_queue_capacity_in_bytes: 4194304 #4MiB
-internode_application_send_queue_reserve_endpoint_capacity_in_bytes: 134217728  #128MiB
-internode_application_send_queue_reserve_global_capacity_in_bytes: 536870912    #512MiB
-internode_application_receive_queue_capacity_in_bytes: 4194304                  #4MiB
-internode_application_receive_queue_reserve_endpoint_capacity_in_bytes: 134217728 #128MiB
-internode_application_receive_queue_reserve_global_capacity_in_bytes: 536870912   #512MiB
+internode_application_send_queue_capacity: 4MiB
+internode_application_send_queue_reserve_endpoint_capacity: 128MiB
+internode_application_send_queue_reserve_global_capacity: 512MiB
+internode_application_receive_queue_capacity: 4MiB
+internode_application_receive_queue_reserve_endpoint_capacity: 128MiB
+internode_application_receive_queue_reserve_global_capacity: 512MiB
 ....
 
 == Virtual Tables for Messaging Metrics
