Deprecate JavaScript user-defined functions patch by Ekaterina Dimitrova; reviewed by Berenguer Blasi and Marcus Eriksson for CASSANDRA-17280

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -64,6 +64,11 @@ Upgrading
       otc_backlog_expiration_interval_ms are deprecated and will be removed at earliest with next major release.
       otc_coalescing_strategy is disabled since 3.11.
 
+Deprecation
+---------
+    - JavaScript user-defined functions have been deprecated. They are planned for removal
+      in the next major release. (CASSANDRA-17280)
+
 4.0.2
 =====
 
