[CASSANDRA-16378] Expose all client options via system_views.clients and nodetool clientstats
Update test/unit/org/apache/cassandra/db/virtual/ClientsTableTest.java

Co-authored-by: ekaterinadimitrova2 <ebd18@pitt.edu>
add space to join options on


add some basic tests for nodetool clientstats


add clear connection history test


Revert "add clear connection history test"

This reverts commit 4bab747709c8bd355e763b4b7dbae4d776bf6010.

nodetool clientstats --clear-history test


Update src/java/org/apache/cassandra/transport/ConnectedClient.java

Co-authored-by: ekaterinadimitrova2 <ebd18@pitt.edu>
remove unneeded


remove unneeded


Review comments
move changes entry up


clean up


clean up

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Expose all client options via system_views.clients and nodetool clientstats (CASSANDRA-16378)
  * Expose streaming as a vtable (CASSANDRA-17390)
  * Make startup checks configurable (CASSANDRA-17220)
  * Add guardrail for number of partition keys on IN queries (CASSANDRA-17186)
