Improve guardrails messages
Guardrail messages include a specific mention of the guardrail framework and the name of the violated guardrail,
so users know what is producing the wanrning or failure. Also, guardrails throw their own type of exception.

patch by Andrés de la Peña; reviewed by Josh McKenzie for CASSANDRA-17430

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Improve guardrails messages (CASSANDRA-17430)
  * Remove all usages of junit.framework and ban them via Checkstyle (CASSANDRA-17316)
  * Add guardrails for read/write consistency levels (CASSANDRA-17188)
  * Add guardrail for SELECT IN terms and their cartesian product (CASSANDRA-17187)
