--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.11.13
+ * emit warning on keyspace creation when replication factor is bigger than the number of nodes (CASSANDRA-16747)
  * Fix snapshot true size calculation (CASSANDRA-17267)
  * Validate existence of DCs when repairing (CASSANDRA-17407)
  * dropping of a materialized view creates a snapshot with dropped- prefix (CASSANDRA-17415)
