"nodetool refresh" is available on ver. 3.11.x

--- a/doc/modules/cassandra/pages/operating/backups.adoc
+++ b/doc/modules/cassandra/pages/operating/backups.adoc
@@ -508,7 +508,7 @@ The two main tools/commands for restoring a table after it has been
 dropped are:
 
 * sstableloader
-* nodetool import
+* nodetool refresh
 
 A snapshot contains essentially the same set of SSTable files as an
 incremental backup does with a few additional files. A snapshot includes
