--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Support DELETE in CQLSSTableWriter (CASSANDRA-14797)
  * Failed inbound internode authentication failures generate ugly warning with stack trace (CASSANDRA-17068)
  * Expose gossip information in system_views.gossip_info virtual table (CASSANDRA-17002)
  * Add guardrails for collection items and size (CASSANDRA-17153)
