--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Provide JMX endpoint to allow transient logging of blocking read repairs (CASSANDRA-17471)
  * Allow users to change cqlsh history location using env variable (CASSANDRA-17448)
  * Add required -f option to use nodetool verify and standalone sstableverify (CASSANDRA-17017)
  * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
