--- a/NEWS.txt
+++ b/NEWS.txt
@@ -136,10 +136,15 @@ Upgrading
       will be removed in a future major release.
     - There is a new cassandra.yaml version 2. Units suffixes should be provided for all rates(B/s|MiB/s|KiB/s|MiB/s),
       memory (KiB|MiB|GiB|B) and duration(d|h|s|ms|us|µs|ns|m)
-      parameters. (CASSANDRA-15234)
+      parameters. List of changed parameters and details to consider during configuration setup can be
+      found at https://cassandra.apache.org/doc/latest/cassandra/new/configuration.html. (CASSANDRA-15234)
       Backward compatibility with the old cassandra.yaml file will be in place until at least the next major version.
-    - Many cassandra.yaml parameters' names have been changed. Full list can be found on ...... (ADD LINK LATER WHEN PAGE
-      IS CREATED) (CASSANDRA-15234)
+    - Many cassandra.yaml parameters' names have been changed. Full list and details to consider during configuration setup
+      when installing/upgrading Cassandra can be found at https://cassandra.apache.org/doc/latest/cassandra/new/configuration.html (CASSANDRA-15234)
+    - Negative values cannot be used for parameters of type data rate, duration and data storage with both old and new cassandra.yaml version.
+      Only exception is if you use old cassandra.yaml, pre-CASSANDRA-15234 - then -1 or other negative values which were advertised as an option
+      to disable config parameters in the old cassandra.yaml are still used. Those are probably converted to null value with the new cassandra.yaml,
+      as written in the new cassandra.yaml version and docs.
     - Before you upgrade, if you are using `cassandra.auth_bcrypt_gensalt_log2_rounds` property,
       confirm it is set to value lower than 31 otherwise Cassandra will fail to start. See CASSANDRA-9384
       for further details. You also need to regenerate passwords for users for who the password
