--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Disallow removing DC from system_auth while nodes are active in the DC (CASSANDRA-17478)
  * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
  * Log largest memtable flush at info instead of debug (CASSANDRA-17472)
  * Add native transport rate limiter options to example cassandra.yaml, and expose metric for dispatch rate (CASSANDRA-17423)
