Add guardrail for ALTER TABLE ADD / DROP / REMOVE column operations
Patch by Josh McKenzie; reviewed by Jon Meredith for CASSANDRA-17495

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -57,6 +57,8 @@ using the provided 'sstableupgrade' tool.
 
 New features
 ------------
+    - New Guardrails added:
+      - Whether ALTER TABLE commands are allowed to mutate columns
 
 Upgrading
 ---------
