--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add guardrail for creation of secondary indexes (CASSANDRA-17498)
  * Add guardrail to disallow creation of uncompressed tables (CASSANDRA-17504)
  * Add guardrail to disallow creation of new COMPACT STORAGE tables (CASSANDRA-17522)
  * repair vtables should expose a completed field due to lack of filtering options in CQL (CASSANDRA-17520)
